Galary view select image and view image 1.0

--- a/select-me-client/src/index.html
+++ b/select-me-client/src/index.html
@@ -19,12 +19,7 @@
 
 </head>
 <body>
-  <div class="btn red">test</div>
-
-  <a class="waves-effect waves-light btn">button</a>
-  <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
-  <a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>button</a>
-
+  <app-root></app-root>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
