All mid part of gallery

--- a/select-me-client/src/index.html
+++ b/select-me-client/src/index.html
@@ -18,15 +18,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 </head>
-<body>
-  <div class="btn red">test</div>
-
-  <a class="waves-effect waves-light btn">button</a>
-  <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
-  <a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>button</a>
-
-
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+<body class="home">
+  <script>
+    $(document).ready(function(){
+        $('#lightgallery').lightGallery({
+          thumbnail:false,
+          mobileSrc:true,
+          closable:false,
+          enableTouch: false,
+          enableDrag: false,
+          loop:false,
+          share:true,
+          download: false,
+          zoom:true,  
+          fullScreen:false,
+          pager: true,
+            
+    
+    }); 
+    });
+</script>
 </body>
 </html>
